feat:menambahkan mode malam

--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -24,3 +24,15 @@
     --heading-font: "Barlow", sans-serif;;
     --paragraph-font: "Montserrat", sans-serif;
 }
+
+    // Light Theme
+    $color-bg-light: #ffffff;
+    $color-text-light: #222;
+    $color-primary-light: #0066ff;
+    $color-secondary-light: #f5f5f5;
+
+    // Dark Theme
+    $color-bg-dark: #121212;
+    $color-text-dark: #eaeaea;
+    $color-primary-dark: #3399ff;
+    $color-secondary-dark: #1e1e1e;
