--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -12,6 +12,7 @@
 @import "./components/page-cover";
 @import "./components/breadcrumb";
 @import "./components/subtitle";
+@import './components/dark-mode';
 @import "./layout/landingpage";
 @import "./layout/loadingcreen";
 @import "./layout/about-us";
