--- a/resources/scss/components/_buttons.scss
+++ b/resources/scss/components/_buttons.scss
@@ -18,20 +18,19 @@
     justify-content: center;
 }
 
-.button-cta-1:hover {
-    background-color: var(--body-color-dark);
-    transition: .5s ease-in-out;
-    color: white !important;
-}
-
 .navbig.scrolled .button-cta-1 {
     background-color: var(--gray);
+    transition: .5s ease-in-out;
+    color: var(--body-color-dark) ;
+}
+
+.button-cta-1.scrolled {
+    color: var(--body-color-dark);
     transition: .5s ease-in-out;
 }
 
 .navbig.scrolled .button-cta-1:hover {
     background-color: var(--body-color-dark);
-    color: white;
 }
 // .button-cta-1
 
