--- a/resources/scss/components/_header.scss
+++ b/resources/scss/components/_header.scss
@@ -1,3 +1,6 @@
+//navbigIndex = header untuk halaman index
+//navbig = Header untuk semua halaman kecuali halaman index
+
 .header {
     width: 100%;
     position: fixed;
@@ -10,50 +13,44 @@
 
 /* Hide Header */
 
-.navbig.transparent {
-    background-color: transparent;
-    color: white;
-  }
-
-  /* Saat scroll */
-.navbig.scrolled {
-    background-color: white;
-    color: var(--text-color) !important;
-  }
-
-.navbig.hidden {
-    transform: translateY(-100%);
-    opacity: 0;
-  }
-
-.navbig.transparent h1 ul li a {
-color: white;
-}
-
-.header.scrolled h1 ul li a {
-color: var(--text-color);
-}
-
-.nav-list .nav-items,
-.cta-list .cta-items,
-.button-cta-1 {
-  transition: color 0.3s ease;
-}
-
-.navbig.transparent h1,
-.navbig.transparent .nav-items,
-.navbig.transparent .cta-items,
-.navbig.transparent .button-cta-1 {
-  color: white !important;
-}
-
-.navbig.scrolled .nav-items,
-.navbig.scrolled .cta-items,
-.navbig.scrolled .button-cta-1 {
-  color: var(--text-color);
-}
-
 .navbig {
+    width: 100%;
+    height: 65px;
+    padding: 0 20px;
+    transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease, opacity 0.3s ease;
+    top: 0;
+    left: 0;
+    background-color: white;
+    color: rgb(15, 41, 22);
+  
+
+    &__wrapper {
+        border-bottom: 1px solid rgba(255, 255, 255, 0.705);
+        padding: 0;
+        gap: 5rem;
+        width: 100%;
+        height: 100%;
+
+        .navbig-left {
+            width: 20%;
+
+            h1 {
+                font-size: 2.5rem;
+            }
+        }
+
+        .navbig-center {
+            gap: 4rem;
+            
+        }
+
+        .navbig-right {
+            gap: 3rem;
+        }
+    }
+}
+
+.navbigIndex {
     width: 100%;
     height: 65px;
     padding: 0 20px;
@@ -88,13 +85,44 @@ color: var(--text-color);
     }
 }
 
+.navbigIndex.transparent {
+    background-color: transparent;
+    color: white;
+  }
+
+  /* Saat scroll */
+.navbigIndex.scrolled {
+    background-color: white;
+    color: var(--text-color) !important;
+    transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease, opacity 0.3s ease;
+  }
+
+.nav-list .nav-items,
+.cta-list .cta-items,
+.button-cta-1 {
+  transition: color 0.3s ease;
+}
+
+.navbig.transparent h1,
+.navbig.transparent .nav-items,
+.navbig.transparent .cta-items,
+.navbig.transparent .button-cta-1 {
+  color: white !important;
+}
+
+.navbig.scrolled .nav-items,
+.navbig.scrolled .cta-items,
+.navbig.scrolled .button-cta-1 {
+  color: var(--text-color);
+}
+
 
 //mobile
 
 .navmobile {
     display: none;
     width: 100dvw !important;
-
+    
 }
 
 /* Hamburger Menu */
@@ -127,7 +155,9 @@ color: var(--text-color);
 }
 
 .navmobile.transparent {
-
+    background-color: transparent !important;
+    color: white !important;
+    
     h1 {
         color: white !important;
     }
@@ -136,13 +166,8 @@ color: var(--text-color);
 /* Saat di-scroll */
 .navmobile.scrolled {
     background-color: white;
-    color: var(--text-color);
-}
-
-.navmobile.hidden {
-    transform: translateY(-100%);
-    opacity: 0;
-    transition: transform 0.3s ease, opacity 0.3s ease;
+    color: var(--body-color-dark);
+    transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease, opacity 0.3s ease;
 }
 
 .navmobile.menu-open {
@@ -186,11 +211,15 @@ color: var(--text-color);
         display: none; /* Sembunyikan menu desktop */
     }
 
+    .navbigIndex {
+        display: none; /* Sembunyikan menu desktop */
+    }
+
     .navmobile {
         display: flex; /* Tampilkan hamburger menu */
         justify-content: space-between;
         align-items: center;
-        padding: 10px 10px;
+        padding: 15px 10px;
         transform: translateY(0);
         opacity: 1;
         transition: transform 0.3s ease, opacity 0.3s ease;
