--- a/resources/scss/layout/_FAQ.scss
+++ b/resources/scss/layout/_FAQ.scss
@@ -48,7 +48,7 @@ $padding-container: 0rem 8rem 0rem 8rem;
         .faq-accordion-item {
           border-bottom: .5px solid black;
           margin-bottom: 0px;
-          width: 70%;
+          width: 100%;
 
           .faq-accordion-header {
         
@@ -97,6 +97,28 @@ $padding-container: 0rem 8rem 0rem 8rem;
   .cta {
     margin-top: 5rem;
     margin-bottom: 5rem;
+  }
+}
+
+@media (max-width: 1030px) {
+  .faq-container {
+    padding: 0px 10px;
+  }
+   .faq-sidebar {
+
+    h1 {
+      font-size: 2rem !important;
+      text-align: center;
+      line-height: 120%;
+      letter-spacing: -.04em;
+    }
+  }
+
+    .faq-accordion-item {
+    border-bottom: .5px solid var(--text-color);
+    margin-bottom: 0px;
+    width: 100% !important;
+
   }
 }
 
