--- a/resources/scss/layout/_artikel-page.scss
+++ b/resources/scss/layout/_artikel-page.scss
@@ -89,6 +89,53 @@
   @media (min-width: 678px) {
 
     .artikel-section {
+        padding: 5rem 4rem;
+    }
+
+    .article-container {
+        grid-template-columns: repeat(2, 1fr) !important;
+        gap: 2rem;
+      }
+
+      .article-card2 {
+        border: 1px solid #ddd;
+        height: max-content;
+        border-radius: 8px;
+
+        .article-car2-info {
+            font-size: .625rem !important;
+            letter-spacing: .04em;
+            text-transform: uppercase;
+            padding: .25rem .5rem;
+            margin-bottom: .5rem;
+        }
+      }
+
+      .article-card2-content {
+        padding: 0 20px;
+        padding-bottom: 1rem;
+
+        h3 { //maksimal judul 13 kata
+            margin-top: .5rem;
+            font-size: 1rem;
+            letter-spacing: -.01em;
+            line-height: 120%;
+            font-weight: 600;
+            height: 2*3rem;
+            color: var(--text-color);
+        }
+
+        .article-card2-caption {
+            margin-top: .8rem;
+            font-size: .7rem !important;
+            letter-spacing: .04em;
+        }
+    }
+  }
+
+  @media (min-width: 1080px) {
+
+    .artikel-section {
         padding: 5rem 6rem;
     }
 
