--- a/resources/scss/layout/_career.scss
+++ b/resources/scss/layout/_career.scss
@@ -175,6 +175,18 @@
 
     .hiring {
         margin-bottom: 5rem;
+
+        &__content {
+            column-gap: 3rem;
+            row-gap: 4rem;
+            grid-template-columns: 1fr 1fr;
+            grid-auto-rows: minmax(150px, auto);
+
+            .hiring__card {
+                padding: 1.5rem;
+                height: 200px;
+            }
+        }
     }
 }
 
