--- a/resources/scss/layout/_our-service.scss
+++ b/resources/scss/layout/_our-service.scss
@@ -197,7 +197,7 @@
     }
 
     .servicecard-wrapper-top {
-        padding: 0 3.125rem;
+        // padding: 0 3.125rem;
         display: flex;
         flex-direction: row !important;
         gap: 1.5rem;
